# -Art-Village-Exploration-Magnifier

./: .gitignore  AGENTS.md  README.md  api_handler.py  app.py  build.sh  config.py  main.py  pyproject.toml  requirements.txt  style.css  test_reload.py  wrangler.toml
.github/workflows/: admin-pages.yml  ci.yml  deploy.yml  smoke.yml
admin/: animals.html  animals.json
docs/: PRE_BUILD_NOTES.md  flet-deployment.md  maintenance-hardening-spec.md  performance-baseline.md  qa-checklist.md  spec-2026-refactor.md  spec-react-foundation.md  technical-stack.md
docs/superpowers/plans/: 2026-06-28-react-foundation.md
flet_app/: .eslintrc.cjs  _types_reexport.py  app_state.py  app_types.py  build_config.py  camera_utils.py  config.py  errors.py  index.html  js.py  magnifier_handle.py  main.py  package-lock.json  package.json  plant_api.py  pokedex_manager.py  pyproject.toml  requirements.txt  ui_theme.py  vite.config.ts  vitest.config.ts
flet_app/assets/: README.md
flet_app/components/: illustrations.py
flet_app/public/: manifest.json  sw.js
flet_app/services/: animals.py  app_lifecycle.py  camera_manager.py  indexed_db.py  lru_cache.py  recognition.py  shared_controls.py  storage.py
flet_app/src/: App.css  App.tsx  index.css  types.ts
flet_app/src/components/: Admin.css  Admin.tsx  AnimalModal.tsx  CameraView.css  CameraView.test.tsx  CameraView.tsx  ErrorBoundary.tsx  FilterTabs.tsx  Gallery.css  Gallery.tsx  OrganSelector.tsx  PlantDetailModal.tsx  cameraLifecycle.test.ts  cameraLifecycle.ts
flet_app/src/hooks/: useAdmin.ts  useCamera.ts  usePlantIdentification.ts  usePokedex.ts
flet_app/src/services/: api.test.ts  api.ts  serviceWorkerPolicy.test.ts  storage.ts
flet_app/views/: animal_view.py  dialogs.py  gallery.py  plant_view.py  shell_view.py  welcome.py
flet_app_old/: _types_reexport.py  app_state.py  app_types.py  build_config.py  camera_utils.py  config.py  errors.py  js.py  logging_setup.py  magnifier_handle.py  main.py  plant_api.py  pokedex_manager.py  pyproject.toml  requirements.txt  ui_theme.py
flet_app_old/components/: illustrations.py
flet_app_old/services/: app_lifecycle.py  camera_manager.py  indexed_db.py  recognition.py  storage.py
flet_app_old/views/: animal_view.py  gallery.py  plant_view.py  shell_view.py  welcome.py
functions/pyodide/: pyodide.asm.data.js
prototype/: index.html
scripts/: build.ps1  compile_flet_app.ps1  compile_flet_app.sh  dev.ps1  install-dev.ps1  measure_flet_payload.py  patch_flet_app_package.py  patch_flet_loader.py  prod_runtime_probe.py  static_build_smoke_cdp.py  ui_smoke_cdp.py  validate_flet_runtime.py  verify_pages_deploy.py
shared/: __init__.py  config.py  errors.py  logging_setup.py  types.py
tests/: test_api_handler.py  test_app_helpers.py  test_app_lifecycle.py  test_camera_controls_css.py  test_camera_identification_flow.py  test_flet_artifacts.py  test_gallery_layout_css.py  test_worker_security.py
worker/: index.js  wrangler.toml  wrangler.toml.example
