[project]
name = "art-village-exploration-magnifier"
version = "0.1.0"
description = "藝素村探險放大鏡 - Flet Web + Cloudflare Worker 植物辨識與探險圖鑑應用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet",
    "flet-camera",
    "requests",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "opencc-python-reimplemented",
    "Pillow",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py312"
line-length = 140
indent-width = 4
exclude = [
    ".chrome-debug-profile",
    ".chrome-prod-8314-profile",
    ".chrome-prod-dom-profile",
    ".chrome-prod-nocdn-profile",
    ".mypy_cache",
    ".npm-cache",
    ".pytest_cache",
    ".ruff_cache",
    ".uv-cache",
    ".venv",
    ".wrangler",
    "__pycache__",
    "flet_app/build",
    "live_app_extract",
    "test_app",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = false
ignore_missing_imports = true
check_untyped_defs = false
exclude = ["build/", "live_app_extract/", "test_app/"]

[[tool.mypy.overrides]]
module = "flet_app.plant_api"
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "flet_app.pokedex_manager"
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "flet_app.services.camera_manager"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "flet_app.services.recognition"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
